# schoolpol-site

./: README.md  index.html  main.css  people.yml  pyproject.toml
templates/: people.html
