[tool.poetry]
name = "schoolpol.github.io"
version = "0.1.0"
description = "Schoolpol website generator"
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
PyYAML = "^6.0"
mistletoe = "^0.8.2"
chevron = "^0.14.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
